# central-command

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .releaserc.yml  CHANGELOG.md  DockerFile  Dockerfile  README.md  dev-compose.yml  docker-compose.yml  example.env  pyproject.toml  relevant_file_path  sweep.yaml  test-compose.yml
.github/workflows/: main.yml  pr.yml  push.yml  release.yml
account/: admin.py  forms.py  models.py
account/migrations/: 0001_initial.py
api-collection/: bruno.json
api-collection/Auth/CreateAccount/: Invalid identifier.bru  Valid.bru
api-collection/Auth/LoginWithCreds/: not verified.bru
api-collection/Auth/LoginWithToken/: success.bru
api-collection/Auth/Mail confirmation/: ConfirmAccount.bru  Resend mail confirmation.bru
api-collection/Auth/ResendConfirmationMail/: Valid.bru
api-collection/Auth/ResetPassword/: confirm the reset.bru  request a reset.bru
api-collection/Characters/: Create.bru  Delete.bru  GetAll.bru  GetCharacter.bru  GetCompatible.bru  Update.bru
api-collection/CreateAccount/: Invalid identifier.bru  Valid.bru
api-collection/LoginWithCreds/: non existent account.bru  success.bru
api-collection/LoginWithToken/: invalid token.bru  missing token.bru
api-collection/environments/: development.bru
app/account/: admin.py  models.py
app/account/migrations/: 0001_initial.py
app/app/: settings.py
nginx/: Dockerfile  nginx.conf
src/: entrypoint.sh  manage.py
src/account/: admin.py  forms.py  models.py  tests.py  utils.py  validators.py
src/account/api/: serializers.py  urls.py  views.py
src/account/migrations/: 0001_initial.py  0002_auto_20201228_0006.py
src/accounts/: admin.py  apps.py  custom_attribute_similarity_validator.py  exceptions.py  models.py  tests.py  validators.py
src/accounts/api/: serializers.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0001_squashed_0002_passwordresetrequest.py  0002_alter_account_verification_token.py  0002_auto_20211119_0218.py  0002_passwordresetrequest.py  0002_passwordresetrequestmodel.py  0003_alter_account_verification_token.py  0003_auto_20240113_1858.py  0003_auto_20240124_1626.py  0004_alter_account_username.py  0004_alter_account_verification_token.py  0004_alter_passwordresetrequestmodel_token.py  0005_alter_account_verification_token.py  0005_passwordresetrequestmodel_expiry_datetime.py  0006_alter_account_verification_token.py  0006_auto_20240118_2053.py
src/central-command/: asgi.py  settings.py  urls.py
src/central_command/: asgi.py  settings.py  urls.py  wsgi.py
src/commons/: error_response.py  mail_wrapper.py  root_view.py  schema.py
src/persistence/: admin.py  apps.py  forms.py  models.py  tests.py  utils.py  validators.py
src/persistence/api/: serializers.py  urls.py  views.py
src/persistence/management/commands/: nuke_duplicated_characters.py
src/persistence/migrations/: 0001_initial.py  0001_initial_squashed_0002_character_last_updated.py  0002_character_last_updated.py
src/server/: admin.py  models.py
src/server/api/: urls.py
src/server/management/commands/: create_moderation_info.py
src/server/migrations/: 0001_initial.py
src/serverlist/: models.py  urls.py  views.py
src/templates/: confirm_template.html  password_reset.html
src/tests/: test_unhandled_exceptions.py  test_username_validation.py
src/tests/accounts/endpoints/: test_login_credentials.py  test_login_token.py  test_register.py  test_reset_password.py  test_server_verification_token.py
src/tests/persistence/commands/: nuke_duplicated_characters.py
src/unitystation_auth/: asgi.py  settings.py  urls.py  wsgi.py
src/website/: views.py
src/website/statics/css/: style.css
src/website/templates/: base.html
src/website/templates/registration/: confirm_template.html  confirmation_email.html  login.html  password_reset_confirm.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt
unitystation_auth/: asgi.py  settings.py  urls.py
website/: views.py
website/templates/: base.html
