[tool.black]
target-version = ['py310']
line-length = 121
force-exclude = '''
migrations
'''

[tool.ruff]
exclude = ["migrations"]
line-length = 121
ignore = []
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # flake8-bugbear
    "B",
    # flake8-django
    "DJ",
    # flake8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-bandit
    # complains about assert inside tests/*
    # "S",
    # flake8-comprehensions
    "C4",
    # flake8-logging-format
    "G",
    # flake8-simplify
    "SIM",
    # flake8-use-pathlib
    "PTH",
    # ruff
    "RUF",
]
fixable = [
    "I",
]

[tool.ruff.isort]
combine-as-imports = true
lines-between-types = 1

[tool.poetry]
name = "central-command"
version = "0.1.0"
description = "All-in-one backend application for Unitystation"
authors = ["Andrés Riquelme <andresfranco.rs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.12"
djangorestframework = "^3.12.1"
psycopg2-binary = "^2.8.6"
django-email-verification = "^0.0.7"
django-rest-knox = "^4.1.0"
gunicorn = "^20.1.0"
python-dotenv = "^0.19.2"
whitenoise = "^6.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
